...

    return () => deepLinkListener.remove();
  }, [handleDeepLink]);

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
                navigation.navigate('MultilineWebhookPaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Custom UI - Card form"
              onPress={() => {
                navigation.navigate('CustomCardFormScreen');
              }}
            />
          </View>
        </>
...
